--- a/main.html
+++ b/main.html
@@ -35,7 +35,11 @@
   </header>
   <main>
    <section id="leftmain">
-    
+    <div id="mainword">
+    <h1>다독이다.</h1>
+    <p>다독이다는 유기견을 보호하고<br> 사랑하는 사람들의 홈페이지 입니다.</p>
+  </div>
+    <div id="textbox"></div>
    </section>
    <section id="rightmain">
     <img src="image/mainright.png" alt="">
