--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
         <a href="">
           <li>입양하기</li></a>
         <a href="">
-          <li>강아지 실종신고</li></a>
+          <li>실종신고</li></a>
         <a href="">
-          <li>강아지 보호중</li></a>
+          <li>보호중</li></a>
         <a href="">
           <li>찜목록 보기</li></a>
       </ul>
@@ -34,13 +34,13 @@
     </nav>
   </header>
   <main>
-   <section id="leftmain">
-    <div id="mainword">
-    <h1>다독이다.</h1>
-    <p>다독이다는 유기견을 보호하고<br> 사랑하는 사람들의 홈페이지 입니다.</p>
-  </div>
+   <article id="leftmain">
+    <section id="mainword">
+    <h1>다독이다</h1>
+    <p>다독이다는 유기견을 보호하고<br> 사랑하는 사람들을 위한 공간 입니다</p>
+  </section>
     <div id="textbox"></div>
-   </section>
+</article>
    <section id="rightmain">
     <img src="image/mainright.png" alt="">
    </section>
