--- a/main.html
+++ b/main.html
@@ -39,7 +39,14 @@
     <h1>다독이다</h1>
     <p>다독이다는 유기견을 보호하고<br> 사랑하는 사람들을 위한 공간 입니다</p>
   </section>
-    <div id="textbox"></div>
+    <section id="textbox">
+      <a href="" id="login">
+      <div id="loginbox">
+        <p>Login</p></div></a>
+    <a href="" id="signin">
+      <div id="siginbox">
+        <p>Sign in</p></div></a>
+    </section>
 </article>
    <section id="rightmain">
     <img src="image/mainright.png" alt="">
