--- a/main.html
+++ b/main.html
@@ -41,11 +41,9 @@
   </section>
     <section id="textbox">
       <a href="" id="login">
-      <div id="loginbox">
-        <p>Login</p></div></a>
+        로그인</a>
     <a href="" id="signin">
-      <div id="siginbox">
-        <p>Sign in</p></div></a>
+        회원가입</a>
     </section>
 </article>
    <section id="rightmain">
