--- a/main.html
+++ b/main.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <header>
-    <div id="headimg">
-    </div>
+    <h1>DaDog</h1>
     <nav id="menu">
       <ul>
         <a href="">
@@ -21,15 +20,14 @@
         <a href="">
           <li>보호중</li></a>
         <a href="">
-          <li>찜목록 보기</li></a>
+          <li>찜목록</li></a>
       </ul>
     </nav>
     <nav id="sidetap">
       <ul>
-        <a href="">
-          <li>내 정보</li></a>
-        <a href="">
-          <li>로그아웃</li></a>
+          <li id="login">로그인</li>
+        <a href="" id="signin">
+          <li>회원가입</li></a>
       </ul>
     </nav>
   </header>
@@ -39,15 +37,35 @@
     <h1>다독이다</h1>
     <p>다독이다는 유기견을 보호하고<br> 사랑하는 사람들을 위한 공간 입니다</p>
   </section>
-    <section id="textbox">
-      <div id="login">
-        로그인</div>
-    <a href="" id="signin">
-        회원가입</a>
-    </section>
+  <section id="dogcard">
+    <div class="card">
+      <img src="image/dog1.png" alt="">
+      <ul>
+        <li>견종 : 골든 리트리버 </li>
+        <li>발견위치 : 당곡역</li>
+        <li>발견날짜 : 2024/08/03</li>
+      </ul>
+    </div>
+    <div class="card">
+      <img src="image/dog2.png" alt="">
+      <ul>
+        <li>견종 : 믹스견</li>
+        <li>발견위치 : 경기광주</li>
+        <li>발견날짜 : 2024/08/03</li>
+      </ul>
+    </div>
+    <div class="card">
+      <img src="image/dog3.png" alt="">
+      <ul>
+        <li>견종 : 시바견</li>
+        <li>발견위치 : 부평구</li>
+        <li>발견날짜 : 2024/08/03</li>
+      </ul>
+    </div>
+  </section>
 </article>
    <section id="rightmain">
-    <img src="image/mainright.png" alt="">
+    <img src="image/mainimg.jpg" alt="">
    </section>
    <article id="modal">
     <form action="">
