--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
     </nav>
   </header>
   <main>
-   <article id="leftmain">
+   <article id="rightmain">
     <section id="mainword">
     <h1>다독이다</h1>
     <p>다독이다는 유기견을 보호하고<br> 사랑하는 사람들을 위한 공간 입니다</p>
@@ -64,7 +64,7 @@
     </div>
   </section>
 </article>
-   <section id="rightmain">
+   <section id="leftmain">
     <img src="image/mainimg.jpg" alt="">
    </section>
    <article id="modal">
