성현 : 회원가입 첫 동의페이지 생성

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>DaDog</h1>
+    <h1><a href="main.html">DaDog</a></h1>
     <nav id="menu">
       <ul>
         <a href="">
@@ -26,7 +26,7 @@
     <nav id="sidetap">
       <ul>
           <li id="login">로그인</li>
-        <a href="" id="signin">
+        <a href="signIn.html" id="signin">
           <li>회원가입</li></a>
       </ul>
     </nav>
