성현 : 회원정보 입력 페이지 생성

--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>다독이다 메인</title>
   <link rel="stylesheet" href="CSS/main.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
     <nav id="sidetap">
       <ul>
           <li id="login">로그인</li>
-        <a href="signIn.html" id="signin">
+        <a href="signUp.html" id="signin">
           <li>회원가입</li></a>
       </ul>
     </nav>
