성현 : 회원가입 유효성 검사 추가 완료

--- a/signUp2.html
+++ b/signUp2.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원가입2</title>
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="CSS/signUp2.css">
 </head>
 <body>
@@ -19,8 +20,8 @@
           <li>실종신고</li></a>
         <a href="">
           <li>보호중</li></a>
-        <a href="">
-          <li>찜목록</li></a>
+        <!-- <a href="">
+          <li>찜목록</li></a> -->
       </ul>
     </nav>
     <nav id="sidetap">
@@ -37,30 +38,138 @@
           <h1>다독이다 회원정보 입력</h1>
           <div class="accountform" id="name">
             <p>이름</p>
-            <input type="text">
+            <input type="text" id="userName">
           </div>
           <div class="accountform" id="phone">
             <p>전화번호</p>
-            <input type="tel">
+            <input type="tel" id="userTel">
           </div>
           <div class="accountform" id="email">
             <p>Email</p>
-            <input type="email">
+            <input type="email" id="userEmail">
+            <div class="success-email hide" style="color: green;">사용할 수 있는 이메일 형식입니다</div>
+            <div class="failure-email hide">이메일 형식에 맞지 않습니다</div>
           </div>
           <div class="accountform" id="userID">
             <p>아이디</p>
-            <input type="text">
+            <input type="text" id="inputUserID">
+            <div class="success-id hide" style="color: green;">사용할 수 있는 아이디입니다</div>
+            <div class="failure-id hide">영어 또는 숫자만 가능합니다</div>
+            <div class="failure-idLen hide">아이디는 4~20글자이어야 합니다</div>
           </div>
           <div class="accountform" id="userPwd">
             <p>비밀번호</p>
-            <input type="password">
+            <input type="password" id="inputUserPwd">
+            <div class="success-pwd hide" style="color: green;">사용할 수 있는 비밀번호입니다</div>
+            <div class="failure-pwd hide">8글자 이상, 영문, 숫자, 특수문자(@$!%*#?&)를 사용하세요</div>
           </div>
         </form>
-        <button type="submit">다음</button>
+        <button type="submit" id="signUp3">다음</button>
     </article>
     <article id="rightarticle">
       <img src="image/signUp2-1.jpg" alt="">
   </article>
+  <script>
+    let name = document.querySelector('#userName');
+    let tel = document.querySelector('#userTel');
+    let email = document.querySelector('#userEmail');
+    let successEmail = document.querySelector('.success-email');
+    let failureEmail = document.querySelector('.failure-email');
+    let ID = document.querySelector('#inputUserID');
+    let successID = document.querySelector('.success-id');
+    let failureID = document.querySelector('.failure-id');
+    let lenID = document.querySelector(".failure-idLen");
+    let pwd = document.querySelector('#inputUserPwd');
+    let successPwd = document.querySelector('.success-pwd');
+    let failurePwd = document.querySelector('.failure-pwd'); 
+
+    ID.onkeyup = function(){
+    if (ID.value.length !== 0) {
+    // 영어 또는 숫자 외의 값을 입력했을 경우
+    if(onlyNumberAndEnglish(ID.value) === false) {
+      successID.classList.add('hide');
+      lenID.classList.add('hide'); //아이디의 길이는 4~20자
+      failureID.classList.remove('hide');// 영어 또는 숫자만 가능합니다
+    }
+    // 길이가 짧을 경우
+    else if(idLength(ID.value) === false){
+      successID.classList.add('hide'); // 사용할 수 있는 아이디입니다
+      lenID.classList.remove('hide');
+      faulureID.classList.add('hide'); // 실패 메시지가 가려져야 함
+    }
+    // 두개 모두 만족한 경우
+    else if(idLength(ID.value) || onlyNumberAndEnglish(ID.value)){
+     successID.classList.remove('hide');
+     lenID.classList.add('hide');
+     failureID.classList.add('hide');
+     }
+     //아무 값도 입력하지 않으면
+    }else{
+      successID.classList.add('hide');
+      lenID.classList.add('hide');
+      failureID.classList.add('hide');
+    }
+  }
+    pwd.onkeyup = function(){
+      if(pwd.value.length !== 0){
+        if(strongPassword(pwd.value)){
+          failurePwd.classList.add('hide');
+          successPwd.classList.remove('hide');
+        }else{
+          failurePwd.classList.remove('hide');
+          successPwd.classList.add('hide');
+        }
+      }
+      else{
+        successPwd.classList.add('hide');
+      }
+    }
+
+    email.onkeyup = function(){
+      if(email.value.length !== 0){
+        if(currentEmail(email.value)){
+          failureEmail.classList.add('hide');
+          successEmail.classList.remove('hide');
+        }else{
+          failureEmail.classList.remove('hide');
+          successEmail.classList.add('hide');
+        }
+      }else{
+        failureEmail.classList.add('hide');
+        successEmail.classList.add('hide');
+      }
+    }
+
+    function idLength(value) {
+    return value.length >= 4 && value.length <= 20
+    }
+
+    function onlyNumberAndEnglish(str) {
+    return /^[A-Za-z0-9][A-Za-z0-9]*$/.test(str);
+    }
+
+    function currentEmail(str){
+      return /^([a-z0-9_\.-]+)@([\da-z\.-]+)\.([a-z\.]{2,6})$/.test(str);
+    }
+
+    function strongPassword (str) {
+    return /^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{8,}$/.test(str);
+    }
+
+    $(() => {
+      $('#signUp3').click(()=>{
+        if($(successEmail).hasClass('hide') === false 
+        && $(successID).hasClass('hide') === false
+        && $(successPwd).hasClass('hide') === false
+      && $(name).length !== 0 && $(tel).length !== 0){
+          location.href = 'signUp3.html'
+        }else{
+          alert('입력되지 않거나 올바르게 작성하지 않은 항목이 있습니다.');
+        }
+      })
+    });
+
+  </script>
   </main>
 </body>
 </html>
