성현 : 페이지 정리완료

--- a/adopt.html
+++ b/adopt.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="grid.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="CSS/adopt.css">
+    <script src="js/script.js"></script>
 
 
 
@@ -26,7 +26,7 @@
             <ul>
               <a href="">
                 <li>보호소 찾기</li></a>
-              <a href="">
+              <a href="adopt.html">
                 <li>입양하기</li></a>
               <a href="">
                 <li>실종신고</li></a>
