--- a/signUp3.html
+++ b/signUp3.html
@@ -12,7 +12,7 @@
       <ul>
         <a href="">
           <li>보호소 찾기</li></a>
-        <a href="">
+        <a href="adopt.html">
           <li>입양하기</li></a>
         <a href="">
           <li>실종신고</li></a>
