성현 : map.html 폰트 수정

--- a/adopt.html
+++ b/adopt.html
@@ -24,7 +24,7 @@
           <h1><a href="main.html">DaDog</a></h1>
           <nav id="menu">
             <ul>
-              <a href="">
+              <a href="map.html">
                 <li>보호소 찾기</li></a>
               <a href="adopt.html">
                 <li>입양하기</li></a>
