--- a/map.html
+++ b/map.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>클릭하여 활성화 및 표시</title>
-    <link rel="stylesheet" href="css/map.css">
+    <link rel="stylesheet" href="CSS/map.css">
 </head>
 <body>
   <header>
     <h1><a href="main.html">DaDog</a></h1>
     <nav id="menu">
       <ul>
-        <a href=""><li>보호소 찾기</li></a>
-        <a href=""><li>입양하기</li></a>
+        <a href="map.html"><li>보호소 찾기</li></a>
+        <a href="adopt.html"><li>입양하기</li></a>
         <a href=""><li>실종신고</li></a>
         <a href=""><li>보호중</li></a>
         <a href=""><li>찜목록</li></a>
