진비 : 맵 우측메인 수정(페이지 버튼, 간격, 전체 페이지)

--- a/map.html
+++ b/map.html
@@ -15,7 +15,7 @@
         <a href="adopt.html"><li>입양하기</li></a>
         <a href=""><li>실종신고</li></a>
         <a href=""><li>보호중</li></a>
-        <a href=""><li>찜목록</li></a>
+        <a href="wishList.html"><li>찜목록</li></a>
       </ul>
     </nav>
     <nav id="sidetap">
@@ -88,6 +88,9 @@
             <!-- 동적으로 추가될 내용 -->
           </tbody>
         </table>
+        <div id="pagination">
+          <!-- 페이지네이션 버튼들 -->
+        </div>
       </div>
     </article>
     <article id="modal">
@@ -109,10 +112,9 @@
     </article>
     <div id="info-box" class="tooltip"></div>
   </main>
-  <script>
-  </script>
-  <script src="js/login.js"></script>
-  <script src="js/mouseover.js"></script>
-  <script src="js/click.js"></script>
+  <script src="JS/buttonShelter.js"></script>
+  <script src="JS/login.js"></script>
+  <script src="JS/mouseover.js"></script>
+  <script src="JS/click.js"></script>
 </body>
 </html>
