--- a/map.html
+++ b/map.html
@@ -84,7 +84,7 @@
               <th class="shelterAddr">주소</th>
             </tr>
           </thead>
-          <tbody id="shelterInfoBody" onclick="openNaverMap()">
+          <tbody id="shelterInfoBody" onclick="openNaverMap(event)">
             <!-- 동적으로 추가될 내용 -->
           </tbody>
         </table>
