성현 : 입양신청 사진 추가 및 수정

--- a/adopt.html
+++ b/adopt.html
@@ -111,7 +111,7 @@
                 <!-- <a href="#"> -->
                     <img src="/image/mong6.png" alt="Image 2">
                     <figcaption class="fig">
-                          <p>견종 : 골든리트리버</p>
+                          <p>견종 : 시바견</p>
                           <p>성별 : 남</p>
                           <p>나이 : 1살</p>
                           <p>공고 시작일 : 2024-07-01</p>
@@ -122,9 +122,9 @@
             </div>
             <div class="gallery-item" data-location="강원도">
                 <!-- <a href="#"> -->
-                    <img src="/image/mong.png" alt="Image 3">
+                    <img src="/image/mong7.jpeg" alt="Image 3">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 닥스훈트</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -137,9 +137,9 @@
             <!-- 두 번째 줄 -->
             <div class="gallery-item" data-location="경기도">
                 <!-- <a href="#"> -->
-                    <img src="/image/mong3.png" alt="Image 4">
+                    <img src="/image/mong8.jpeg" alt="Image 4">
                     <figcaption class="fig">
-                        견종 : 진돗개<br>
+                        <p>견종 : 시츄</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -165,7 +165,7 @@
                 <!-- <a href="#"> -->
                     <img src="/image/mong5.png" alt="Image 6">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 믹스견</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -191,9 +191,9 @@
             </div>
             <div class="gallery-item" data-location="경상도">
                 <!-- <a href="#"> -->
-                    <img src="/image/mong5.png" alt="Image 8">
+                    <img src="/image/mong9.jpeg" alt="Image 8">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 치와와</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -219,9 +219,9 @@
             <!-- 네 번째 줄 -->
             <div class="gallery-item" data-location="전라도">
                 <!-- <a href="#"> -->
-                    <img src="/image/mong6.png" alt="Image 10">
+                    <img src="/image/mong10.jpeg" alt="Image 10">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 토이푸들</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -232,9 +232,9 @@
             </div>
             <div class="gallery-item" data-location="제주도">
                 <!-- <a href="#"> -->
-                    <img src="/image/mong.png" alt="Image 11">
+                    <img src="/image/mong11.jpeg" alt="Image 11">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 비숑프리제</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -245,9 +245,9 @@
             </div>
             <div class="gallery-item" data-location="제주도">
                 <!-- <a href="#"> -->
-                    <img src="/image/mong3.png" alt="Image 12">
+                    <img src="/image/mong12.jpeg" alt="Image 12">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 말티즈</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -260,9 +260,9 @@
             <!-- 다섯 번째 줄 -->
             <div class="gallery-item" data-location="강원도">
                 <!-- <a href="#"> -->
-                    <img src="/image/mong5.png" alt="Image 13">
+                    <img src="/image/mong13.jpeg" alt="Image 13">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 비글</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -273,9 +273,9 @@
             </div>
             <div class="gallery-item" data-location="강원도">
                 <!-- <a href="#"> -->
-                    <img src="/image/mong4.png" alt="Image 14">
+                    <img src="/image/mong14.jpeg" alt="Image 14">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 웰시코기</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -286,9 +286,9 @@
             </div>
             <div class="gallery-item" data-location="경기도">
                 <!-- <a href="#"> -->
-                    <img src="/image/mong5.png" alt="Image 15">
+                    <img src="/image/mong15.jpeg" alt="Image 15">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 슈나우저</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -301,9 +301,9 @@
             <!-- 여섯 번째 줄 -->
             <div class="gallery-item" data-location="경기도">
                 <!-- <a href="#"> -->
-                    <img src="/image/mong2.png" alt="Image 16">
+                    <img src="/image/mong16.jpeg" alt="Image 16">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 포메라니안</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -314,9 +314,9 @@
             </div>
             <div class="gallery-item" data-location="서울특별시">
                 <!-- <a href="#"> -->
-                    <img src="/image/mong.png" alt="Image 17">
+                    <img src="/image/mong17.jpeg" alt="Image 17">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 달마시안</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -357,7 +357,7 @@
                 <!-- <a href="#"> -->
                     <img src="/image/mong6.png" alt="Image 20">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 시바견</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -370,7 +370,7 @@
                 <!-- <a href="#"> -->
                     <img src="/image/mong6.png" alt="Image 21">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 시바견</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -439,7 +439,7 @@
                 <!-- <a href="#"> -->
                     <img src="/image/mong5.png" alt="Image 20">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 믹스견</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -521,7 +521,7 @@
                 <!-- <a href="#"> -->
                     <img src="/image/mong5.png" alt="Image 23">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 믹스견</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
@@ -534,7 +534,7 @@
                 <!-- <a href="#"> -->
                     <img src="/image/mong6.png" alt="Image 24">
                     <figcaption class="fig">
-                        <p>견종 : 골든리트리버</p>
+                        <p>견종 : 시바견</p>
                         <p>성별 : 남</p>
                         <p>나이 : 1살</p>
                         <p>공고 시작일 : 2024-07-01</p>
