성현 : 코드 링크 정리 및 파일 정리 완료

--- a/findDog.html
+++ b/findDog.html
@@ -5,24 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="protect.css">
-    <script src="protect.js"></script>
-
-
-
-
-
-
-
-
-</head>
-
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>다독이다 메인</title>
-    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/findDog.css">
+    <script src="js/findDog.js"></script>
 </head>
 
 <body>
@@ -30,13 +14,13 @@
         <h1><a href="main.html">DaDog</a></h1>
         <nav id="menu">
             <ul>
-                <a href="">
+                <a href="map.html">
                     <li>보호소 찾기</li>
                 </a>
-                <a href="">
+                <a href="adopt.html">
                     <li>입양하기</li>
                 </a>
-                <a href="">
+                <a href="findDog.html">
                     <li>실종신고</li>
                 </a>
                 <a href="">
@@ -62,7 +46,7 @@
 
 <!-- 메뉴 아래 문구 -->
 <div class="ch">
-    <h1>보호중</h1>
+    <h1>실종신고</h1>
 </div>
 <hr>
 <br>
@@ -105,7 +89,7 @@
             </div>
             <div class="buttons-container">
                 <button type="button" id="searchBtn">조회</button>
-                <a href="detail.html">
+                <a href="findDog2.html">
                     <button type="button" id="registerBtn">등록</button>
                 </a>
             </div>
