--- a/signUp3.html
+++ b/signUp3.html
@@ -14,7 +14,7 @@
           <li>보호소 찾기</li></a>
         <a href="adopt.html">
           <li>입양하기</li></a>
-        <a href="">
+        <a href="findDog.html">
           <li>실종신고</li></a>
         <a href="">
           <li>보호중</li></a>
