--- a/adopt2.html
+++ b/adopt2.html
@@ -33,27 +33,81 @@
     </nav>
   </header>
   <main>
-    <div id="name">
-      <img src="" alt="" id="dogImg">
-      <figcaption id="dogInfo">
-
-      </figcaption>
-    </div>
+    <h1>입양동물 상세보기</h1>
+    <article id="name">
+      <section id="dogImage">
+        <img src="" alt="" id="dogImg">
+        <!-- <input type="button" value="찜하기" id="btn_dog"> -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" id="like" onclick="changeRed()">
+          <path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/>
+        </svg>
+      </section>
+      <section id="dogInfo">
+        <div id="dogBreed"></div>
+        <div id="dogGender"></div>
+        <div id="dogAge"></div>
+        <div id="dogStart"></div>
+        <div id="dogEnd"></div>
+        <div id="dogCenter">
+        </div>
+      </section>
+    </article>
+    <hr>
+    <h1>입양 절차</h1>
+    <article id="procedureAndPrecautions">
+      <ul>
+        <li>
+          <span class="head">1</span>
+          <img src="image/procedure1.png" alt="" id="img1">
+          <p>다독이다 홈페이지에서 입양 가능한 강아지를 조회합니다.</p></li>
+        <li id="no2">
+          <span class="head">2</span>
+          <img src="image/procedure2.png" alt="" id="img2">
+          <p>입양하고 싶은 강아지를 찜목록에 등록하거나 상세 페이지에서 입양신청을 합니다.</p>
+        </li>
+        <li>
+          <span class="head">3</span>
+          <img src="image/procedure3.png" alt="" id="img3">
+          <p>해당 보호소의 확인 후 개별 연락을 기다립니다.</p>
+        </li>
+        <li>
+          <span class="head">4</span>
+          <img src="image/procedure4.png" alt="" id="img4">
+          <p>해당 보호소와 절차에 따라 면담을 진행합니다.</p>
+        </li>
+        <li>
+          <span class="head">5</span>
+          <img src="image/procedure5.png" alt="" id="img5">
+          <p>면담 및 교육 수료 후 정식 입양을 완료합니다.</p>
+        </li>
+      </ul>
+    </article>
     <script>
       $(() => {
         //url의 파라미터(쿼리) 가져옴
         let url = window.location.search;
         console.log(url);
         let param = new URLSearchParams(url);
-        let dogInfo = param.get('dogInfo');
-        console.log(dogInfo);
-        let dogImges = param.get('dogImg');
-        console.log(dogImges);
-        document.getElementById("dogImg").src = dogImges;
-        document.getElementById("dogInfo").innerText = dogInfo;
+        let dogImages = param.get('dogImg');
+        let breeds = param.get('breed');
+        let genders = param.get('gender');
+        let ages = param.get('age');
+        let starts = param.get('start');
+        let ends = param.get('end');
+        let centers = param.get('center');
+        document.getElementById("dogImg").src = dogImages;
+        document.getElementById("dogBreed").innerHTML = breeds;
+        document.getElementById("dogAge").innerHTML = ages;
+        document.getElementById("dogGender").innerHTML = genders;
+        document.getElementById("dogCenter").innerHTML = centers;
+        document.getElementById("dogStart").innerHTML = starts;
+        document.getElementById("dogEnd").innerHTML = ends;
       });
+      function changeRed() {
+        document.getElementById("like").style.fill = "red";
+        alert("찜 목록에 추가되었습니다.");
+      }
     </script>
-
   </main>
 </body>
 </html>
