성현 : 확인 및 내용 수정

--- a/adopt2.html
+++ b/adopt2.html
@@ -65,26 +65,26 @@
           <li>
             <span class="head">1</span>
             <img src="image/procedure1.png" alt="" id="img1">
-            <p>다독이다 홈페이지에서 입양 가능한 강아지를 조회합니다.</p></li>
+            <p>홈페이지에서 입양 가능한<br>반려견 조회</p></li>
           <li id>
             <span class="head">2</span>
             <img src="image/procedure2.png" alt="" id="img2">
-            <p>입양하고 싶은 강아지를 찜목록에 등록하거나 상세 페이지에서 입양신청을 합니다.</p>
+            <p>해당 반려견을 찜목록에 등록<br>하거나 상세 페이지에서 입양신청</p>
           </li>
           <li>
             <span class="head">3</span>
             <img src="image/procedure3.png" alt="" id="img3">
-            <p>해당 보호소의 확인 후 개별 연락을 기다립니다.</p>
+            <p>보호소의 확인 후 <br>개별 연락 대기</p>
           </li>
           <li>
             <span class="head">4</span>
             <img src="image/procedure4.png" alt="" id="img4">
-            <p>해당 보호소와 절차에 따라 면담을 진행합니다.</p>
+            <p>보호소의 절차에 따라 <br>면담 진행</p>
           </li>
           <li>
             <span class="head">5</span>
             <img src="image/procedure5.png" alt="" id="img5">
-            <p>면담 및 교육 수료 후 정식 입양을 완료합니다.</p>
+            <p>면담 및 교육 수료 후 <br>정식 입양 완료</p>
           </li>
         </ul>
       </section>
@@ -99,7 +99,7 @@
             <p class="sec">강아지를 입양하기 전에는 반드시 동물 병원에서 건강 검진을 받아야 합니다. 강아지가 가진 질병이나 기생충, 접종 여부 등을 파악하고, 필요한 치료나 예방 접종을 받으세요. 또한, 강아지의 나이와 성별에 따라 중성화 수술을 고려해야 할 시기가 옵니다. 중성화 수술은 강아지의 생식기 관련 질병을 예방하고, 행동 문제를 줄여주는 효과가 있습니다.</p>
           </li>
           <li>
-            <strong><p>세 번째, 강아지를 위한 준비물을 구비하기.</p></strong>
+            <strong><p>세 번째, 강아지를 위한 준비물을 구비하기</p></strong>
             <p class="sec">강아지가 살기 좋은 환경을 만들어주기 위해서는 몇 가지 필수 용품들이 필요합니다. 밥그릇과 물그릇, 사료와 간식, 방석과 집, 산책용 리드와 하네스, 배변패드와 배변봉투, 미용 용품과 장난감, 간식 등이 대표적입니다.이 외에도 강아지의 품종과 크기, 나이와 성격에 따라 필요한 용품들이 다를 수 있으므로, 미리 알아보고 준비하세요.</p>
           </li>
           <li>
