--- a/findDog2.html
+++ b/findDog2.html
@@ -40,13 +40,13 @@
       </section>
       <section id="page">
         <form action="" id="findInfo">
-          <div><label for="name">* 등록인</label><input type="text" id="name" name="name" class="con" required></div>
-          <div><label for="title">* 글 제목</label><input type="text" id="title" name="title" class="con" required></div>
-          <div><label for="place">* 실종 장소</label><input type="text" id="place" name="place" class="con" required></div>
-          <div><label for="phone">* 연락처</label><input type="tel" id="phone" name="phone" class="con" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" required><br>
-            ex) 012-345-6789</div>
-          <div><label for="date">* 실종 날짜</label><input type="date" id="date" name="date" class="con" required></div>
-          <div><label for="contents">* 상세 설명</label><textarea name="contents" id="contents" cols="55" rows="15" required></textarea></div>
+          <div><label for="name">등록인</label><input type="text" id="name" name="name" class="con" required></div>
+          <div><label for="title">제목</label><input type="text" id="title" name="title" class="con" required></div>
+          <div><label for="place">실종 장소</label><input type="text" id="place" name="place" class="con" required></div>
+          <div><label for="phone">연락처</label><input type="tel" id="phone" name="phone" class="con" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" required><br>
+            <p style="font-size: 15px; margin-left: 120px;">ex) 012-345-6789</p></div>
+          <div><label for="date">실종 날짜</label><input type="date" id="date" name="date" class="con" required></div>
+          <div><label for="contents">상세 설명</label><textarea name="contents" id="contents" cols="37" rows="7" required></textarea></div>
           <input type="submit" value="등록하기" id="sub">
         </form>
       </section>
