석현 : findDog 수정

--- a/findDog.html
+++ b/findDog.html
@@ -44,18 +44,24 @@
 <!-- 여기가 위 헤더 -->
 
 
+
+
+    
+
 <!-- 메뉴 아래 문구 -->
 <div class="ch">
     <h1>실종신고</h1>
 </div>
 <hr>
 <br>
-<ul class="hc">
-
-    <li>실종신고 등록은 <a href="/front/awtis/login/login.do?menuNo=8000200006">로그인</a> 후 가능합니다.</li>
-    <li>이 메뉴는 동물을 빨리 찾을 수 있도록 실종 관련 정보를 공유하는 공간입니다.</li>
-    <li>동물보호법상 동물소유자가 하는 동물실종신고는 <a href="/front/awtis/login/login.do?menuNo=8000200006">실종신고</a> 메뉴에서 하시기 바랍니다.</li>
-</ul>
+<div class="hc">
+    <ul>
+        <li>실종신고 등록은 <a href="/front/awtis/login/login.do?menuNo=8000200006" style="color: blue;" >로그인</a> 후 가능합니다.</li>
+        <li>이 메뉴는 동물을 빨리 찾을 수 있도록 실종 관련 정보를 공유하는 공간입니다.</li>
+        <li>동물보호법상 동물소유자가 하는 동물실종신고는 <a href="/front/awtis/login/login.do?menuNo=8000200006" style="color: blue;">실종신고</a> 메뉴에서 하시기 바랍니다.</li>
+    </ul>
+</div>
+<hr>
 <br>
 
 <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->
