석현 : adopt 메인 문구 수정

--- a/adopt.html
+++ b/adopt.html
@@ -51,7 +51,7 @@
     <body>
         <!-- 메뉴 아래 문구 -->
         <div class="ch">
-            <h1>보호중 아이들</h1>
+            <h1>입양하기</h1>
         </div>
         <hr>
         <br>
