성현 : 파일 정리

--- a/findDog.html
+++ b/findDog.html
@@ -23,10 +23,10 @@
                 <a href="findDog.html">
                     <li>실종신고</li>
                 </a>
-                <a href="">
+                <a href="boho.html">
                     <li>보호중</li>
                 </a>
-                <a href="">
+                <a href="wishList.html">
                     <li>찜목록</li>
                 </a>
             </ul>
