--- a/boho.html
+++ b/boho.html
@@ -5,44 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="boho.css">
+    <link rel="stylesheet" href="CSS/boho.css">
 
 </head>
 
 
 <body>
-    <header>
-        <h1><a href="main.html">DaDog</a></h1>
-        <nav id="menu">
-            <ul>
-                <a href="">
-                    <li>보호소 찾기</li>
-                </a>
-                <a href="">
-                    <li>입양하기</li>
-                </a>
-                <a href="">
-                    <li>실종신고</li>
-                </a>
-                <a href="">
-                    <li>보호중</li>
-                </a>
-                <a href="">
-                    <li>찜목록</li>
-                </a>
-            </ul>
-        </nav>
-        <nav id="sidetap">
-            <ul>
-                <li id="login">로그인</li>
-                <a href="signUp.html" id="signin">
-                    <li>회원가입</li>
-                </a>
-            </ul>
-        </nav>
-</body>
-</header>
-
+  <header>
+    <h1><a href="main.html">DaDog</a></h1>
+    <nav id="menu">
+      <ul>
+        <a href="map.html">
+          <li>보호소 찾기</li></a>
+        <a href="adopt.html">
+          <li>입양하기</li></a>
+        <a href="findDog.html">
+          <li>실종신고</li></a>
+        <a href="boho.html">
+          <li>보호중</li></a>
+        <a href="wishList.html">
+          <li>찜목록</li></a>
+      </ul>
+    </nav>
+    <nav id="sidetap">
+      <ul>
+          <li id="login">로그인</li>
+        <a href="signUp.html" id="signin">
+          <li>회원가입</li></a>
+      </ul>
+    </nav>
+  </header>
 
 <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ헤더ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->
 
@@ -131,7 +123,7 @@
     <div class="gallery-container">
         <div class="gallery">
             <div class="gallery-item" data-location="포메라니안" data-gender="암컷" data-lostdate="2024-04-02">
-                <img src="bohoimg/lang1.jpeg" alt="Image 2">
+                <img src="boho/bohoimg/lang1.jpeg" alt="Image 2">
                 <div class="date">
                     <span>02</span><br>2024-04
                 </div>
@@ -146,7 +138,7 @@
             </div>
 
             <div class="gallery-item" data-location="시츄" data-gender="수컷" data-lostdate="2024-05-05">
-                <img src="bohoimg/lang2.jpeg" alt="Image 4">
+                <img src="boho/bohoimg/lang2.jpeg" alt="Image 4">
                 <div class="date">
                     <span>05</span><br>2024-05
                 </div>
@@ -164,7 +156,7 @@
 
             <div class="gallery-item" data-location="시바" data-gender="암컷" data-lostdate="2024-06-09">
 
-                <img src="bohoimg/lang3.jpeg" alt="Image 3">
+                <img src="boho/bohoimg/lang3.jpeg" alt="Image 3">
                 <div class="date">
                     <span>09</span><br>2024-06
                 </div>
@@ -183,7 +175,7 @@
 
             <!-- 두 번째 줄 -->
             <div class="gallery-item" data-location="치와와" data-gender="암컷" data-lostdate="2024-01-09">
-                <img src="bohoimg/lang4.jpeg" alt="Image 4">
+                <img src="boho/bohoimg/lang4.jpeg" alt="Image 4">
                 <div class="date">
                     <span>09</span><br>2024-01
                 </div>
@@ -199,7 +191,7 @@
             </div>
             <div class="gallery-item" data-location="포메라니안" data-gender="수컷" data-lostdate="2024-04-10">
 
-                <img src="bohoimg/lang5.jpg" alt="Image 5">
+                <img src="boho/bohoimg/lang5.jpg" alt="Image 5">
                 <div class="date">
                     <span>10</span><br>2024-04
                 </div>
@@ -215,7 +207,7 @@
             </div>
             <div class="gallery-item" data-location="진돗개" data-gender="암컷" data-lostdate="2024-04-24">
 
-                <img src="bohoimg/lang6.jpeg" alt="Image 6">
+                <img src="boho/bohoimg/lang6.jpeg" alt="Image 6">
                 <div class="date">
                     <span>24</span><br>2024-04
                 </div>
@@ -234,7 +226,7 @@
             <!-- 세 번째 줄 -->
             <div class="gallery-item" data-location="말티즈" data-gender="수컷" data-lostdate="2024-03-15">
 
-                <img src="bohoimg/lang7.jpg" alt="Image 7">
+                <img src="boho/bohoimg/lang7.jpg" alt="Image 7">
                 <div class="date">
                     <span>15</span><br>2024-03
                 </div>
@@ -250,7 +242,7 @@
             </div>
             <div class="gallery-item" data-location="시바" data-gender="수컷" data-lostdate="2024-01-01">
 
-                <img src="bohoimg/lang8.jpg" alt="Image 8">
+                <img src="boho/bohoimg/lang8.jpg" alt="Image 8">
                 <div class="date">
                     <span>01</span><br>2024-01
                 </div>
@@ -266,7 +258,7 @@
             </div>
             <div class="gallery-item" data-location="진돗개" data-gender="수컷" data-lostdate="2024-02-24">
 
-                <img src="bohoimg/lang9.jpeg"alt="Image 9">
+                <img src="boho/bohoimg/lang9.jpeg"alt="Image 9">
                 <div class="date">
                     <span>24</span><br>2024-02
                 </div>
@@ -284,7 +276,7 @@
             <!-- 네 번째 줄 -->
             <div class="gallery-item" data-location="말티즈" data-gender="수컷" data-lostdate="2024-05-09">
 
-                <img src="bohoimg/lang10.jpg" alt="Image 10">
+                <img src="boho/bohoimg/lang10.jpg" alt="Image 10">
                 <div class="date">
                     <span>09</span><br>2024-05
                 </div>
@@ -299,7 +291,7 @@
             </div>
 
             <div class="gallery-item" data-location="비숑" data-gender="수컷" data-lostdate="2024-07-19">
-                <img src="bohoimg/lang11.jpeg" alt="Image 11">
+                <img src="boho/bohoimg/lang11.jpeg" alt="Image 11">
                 <div class="date">
                     <span>19</span><br>2024-07
                 </div>
@@ -315,7 +307,7 @@
             </div>
             <div class="gallery-item" data-location="믹스" data-gender="수컷" data-lostdate="2024-02-18">
 
-                <img src="bohoimg/lang12.jpeg" alt="Image 12">
+                <img src="boho/bohoimg/lang12.jpeg" alt="Image 12">
                 <div class="date">
                     <span>18</span><br>2024-02
                 </div>
@@ -333,7 +325,7 @@
             <!-- 다섯 번째 줄 -->
             <div class="gallery-item" data-location="믹스" data-gender="암컷" data-lostdate="2024-05-18">
 
-                <img src="bohoimg/lang13.jpeg" alt="Image 13">
+                <img src="boho/bohoimg/lang13.jpeg" alt="Image 13">
                 <div class="date">
                     <span>18</span><br>2024-05
                 </div>
@@ -349,7 +341,7 @@
             </div>
             <div class="gallery-item" data-location="푸들" data-gender="암컷" data-lostdate="2024-06-18">
 
-                <img src="bohoimg/lang14.jpeg" alt="Image 14">
+                <img src="boho/bohoimg/lang14.jpeg" alt="Image 14">
                 <div class="date">
                     <span>18</span><br>2024-06
                 </div>
@@ -365,7 +357,7 @@
             </div>
             <div class="gallery-item" data-location="푸들" data-gender="수컷" data-lostdate="2024-07-24">
 
-                <img src="bohoimg/lang15.jpeg" alt="Image 15">
+                <img src="boho/bohoimg/lang15.jpeg" alt="Image 15">
                 <div class="date">
                     <span>24</span><br>2024-07
                 </div>
@@ -383,7 +375,7 @@
             <!-- 여섯 번째 줄 -->
             <div class="gallery-item" data-location="진돗개" data-gender="암컷" data-lostdate="2024-07-09">
 
-                <img src="bohoimg/lang16.jpg" alt="Image 16">
+                <img src="boho/bohoimg/lang16.jpg" alt="Image 16">
                 <div class="date">
                     <span>09</span><br>2024-07
                 </div>
@@ -399,7 +391,7 @@
             </div>
             <div class="gallery-item" data-location="믹스" data-gender="암컷" data-lostdate="2024-01-11">
 
-                <img src="bohoimg/lang17.jpg" alt="Image 17">
+                <img src="boho/bohoimg/lang17.jpg" alt="Image 17">
                 <div class="date">
                     <span>11</span><br>2024-01
                 </div>
@@ -417,7 +409,7 @@
 
             <div class="gallery-item" data-location="시바" data-gender="수컷" data-lostdate="2024-02-01">
                 <a href="detail.html">
-                    <img src="bohoimg/lang18.jpeg" alt="Image 18">
+                    <img src="boho/bohoimg/lang18.jpeg" alt="Image 18">
                     <div class="date">
                         <span>01</span><br>2024-02
                     </div>
@@ -436,7 +428,7 @@
             <div class="gallery-item" data-location="말티즈" data-gender="암컷" data-lostdate="2024-03-11">
 
 
-                <img src="bohoimg/lang19.jpeg" alt="Image 19">
+                <img src="boho/bohoimg/lang19.jpeg" alt="Image 19">
                 <div class="date">
                     <span>11</span><br>2024-03
                 </div>
@@ -454,7 +446,7 @@
 
             <div class="gallery-item" data-location="포메라니안" data-gender="수컷" data-lostdate="2024-04-27">
 
-                <img src="bohoimg/lang20.jpg" alt="Image 20">
+                <img src="boho/bohoimg/lang20.jpg" alt="Image 20">
                 <div class="date">
                     <span>27</span><br>2024-04
                 </div>
@@ -471,7 +463,7 @@
 
             <div class="gallery-item" data-location="푸들" data-gender="수컷" data-lostdate="2024-05-01">
 
-                <img src="bohoimg/lang21.jpeg" alt="Image 21">
+                <img src="boho/bohoimg/lang21.jpeg" alt="Image 21">
                 <div class="date">
                     <span>01</span><br>2024-05
                 </div>
@@ -489,7 +481,7 @@
             <!-- 일곱 번째 줄 -->
             <div class="gallery-item" data-location="말티즈" data-gender="수컷" data-lostdate="2024-06-21">
 
-                <img src="bohoimg/lang22.jpeg" alt="Image 19">
+                <img src="boho/bohoimg/lang22.jpeg" alt="Image 19">
                 <div class="date">
                     <span>21</span><br>2024-06
                 </div>
@@ -507,7 +499,7 @@
 
             <div class="gallery-item" data-location="진돗개" data-gender="수컷" data-lostdate="2024-07-07">
 
-                <img src="bohoimg/lang23.jpg" alt="Image 20">
+                <img src="boho/bohoimg/lang23.jpg" alt="Image 20">
                 <div class="date">
                     <span>07</span><br>2024-07
                 </div>
@@ -523,7 +515,7 @@
 
             <div class="gallery-item" data-location="푸들" data-gender="수컷" data-lostdate="2024-01-04">
 
-                <img src="bohoimg/lang24.jpeg" alt="Image 21">
+                <img src="boho/bohoimg/lang24.jpeg" alt="Image 21">
                 <div class="date">
                     <span>04</span><br>2024-01
                 </div>
@@ -541,7 +533,7 @@
             <!-- 여덟 번째 줄 -->
             <div class="gallery-item" data-location="믹스" data-gender="수컷" data-lostdate="2024-02-14">
 
-                <img src="bohoimg/lang25.jpg" alt="Image 19">
+                <img src="boho/bohoimg/lang25.jpg" alt="Image 19">
                 <div class="date">
                     <span>14</span><br>2024-02
                 </div>
@@ -558,7 +550,7 @@
 
             <div class="gallery-item" data-location="믹스" data-gender="수컷" data-lostdate="2024-03-07">
 
-                <img src="bohoimg/lang26.jpg" alt="Image 20">
+                <img src="boho/bohoimg/lang26.jpg" alt="Image 20">
                 <div class="date">
                     <span>07</span><br>2024-03
                 </div>
@@ -576,7 +568,7 @@
 
             <div class="gallery-item" data-location="믹스" data-gender="수컷" data-lostdate="2024-04-01">
 
-                <img src="bohoimg/lang27.jpg" alt="Image 21">
+                <img src="boho/bohoimg/lang27.jpg" alt="Image 21">
                 <div class="date">
                     <span>01</span><br>2024-04
                 </div>
@@ -594,7 +586,7 @@
             <!-- 아홉 번째 줄 -->
             <div class="gallery-item" data-location="비숑" data-gender="수컷" data-lostdate="2024-05-01">
 
-                <img src="bohoimg/lang28.jpg"alt="Image 19">
+                <img src="boho/bohoimg/lang28.jpg"alt="Image 19">
                 <div class="date">
                     <span>01</span><br>2024-05
                 </div>
@@ -610,7 +602,7 @@
 
             <div class="gallery-item" data-location="비숑" data-gender="수컷" data-lostdate="2024-06-17">
 
-                <img src="bohoimg/lang29.jpeg"alt="Image 20">
+                <img src="boho/bohoimg/lang29.jpeg"alt="Image 20">
                 <div class="date">
                     <span>17</span><br>2024-06
                 </div>
@@ -627,7 +619,7 @@
 
             <div class="gallery-item" data-location="믹스" data-gender="수컷" data-lostdate="2024-07-02">
 
-                <img src="bohoimg/lang30.jpeg" alt="Image 21">
+                <img src="boho/bohoimg/lang30.jpeg" alt="Image 21">
                 <div class="date">
                     <span>02</span><br>2024-07
                 </div>
@@ -645,7 +637,7 @@
             <!-- 열 번째 줄 -->
             <div class="gallery-item" data-location="비숑" data-gender="암컷" data-lostdate="2024-07-07">
 
-                <img src="bohoimg/lang31.jpeg" alt="Image 22">
+                <img src="boho/bohoimg/lang31.jpeg" alt="Image 22">
                 <div class="date">
                     <span>07</span><br>2024-07
                 </div>
@@ -662,7 +654,7 @@
 
             <div class="gallery-item" data-location="믹스" data-gender="수컷" data-lostdate="2024-06-02">
 
-                <img src="bohoimg/lang32.jpg" alt="Image 23">
+                <img src="boho/bohoimg/lang32.jpg" alt="Image 23">
                 <div class="date">
                     <span>02</span><br>2024-06
                 </div>
@@ -679,7 +671,7 @@
 
             <div class="gallery-item" data-location="래브라도리트리버" data-gender="암컷" data-lostdate="2024-05-17">
 
-                <img src="bohoimg/lang33.jpeg" alt="Image 24">
+                <img src="boho/bohoimg/lang33.jpeg" alt="Image 24">
                 <div class="date">
                     <span>17</span><br>2024-05
                 </div>
@@ -696,7 +688,7 @@
    <!-- 열 한번 째 줄 -->
             <div class="gallery-item" data-location="래브라도리트리버" data-gender="암컷" data-lostdate="2024-04-17">
 
-                <img src="bohoimg/lang34.jpeg" alt="Image 24">
+                <img src="boho/bohoimg/lang34.jpeg" alt="Image 24">
                 <div class="date">
                     <span>17</span><br>2024-04
                 </div>
@@ -713,7 +705,7 @@
 
             <div class="gallery-item" data-location="믹스" data-gender="암컷" data-lostdate="2024-03-17">
 
-                <img src="bohoimg/lang35.jpg" alt="Image 24">
+                <img src="boho/bohoimg/lang35.jpg" alt="Image 24">
                 <div class="date">
                     <span>17</span><br>2024-03
                 </div>
@@ -730,7 +722,7 @@
 
             <div class="gallery-item" data-location="보더콜리" data-gender="암컷" data-lostdate="2024-02-17">
 
-                <img src="bohoimg/lang36.jpg" alt="Image 24">
+                <img src="boho/bohoimg/lang36.jpg" alt="Image 24">
                 <div class="date">
                     <span>17</span><br>2024-02
                 </div>
@@ -747,7 +739,7 @@
    <!-- 열 두번째 줄 -->
             <div class="gallery-item" data-location="말티푸" data-gender="암컷" data-lostdate="2024-01-17">
 
-                <img src="bohoimg/lang37.jpeg" alt="Image 24">
+                <img src="boho/bohoimg/lang37.jpeg" alt="Image 24">
                 <div class="date">
                     <span>17</span><br>2024-01
                 </div>
@@ -764,7 +756,7 @@
    <!-- 열 세번째 줄 -->
             <div class="gallery-item" data-location="말티푸" data-gender="암컷" data-lostdate="2024-01-29">
 
-                <img src="bohoimg/lang38.jpeg" alt="Image 24">
+                <img src="boho/bohoimg/lang38.jpeg" alt="Image 24">
                 <div class="date">
                     <span>29</span><br>2024-01
                 </div>
@@ -781,7 +773,7 @@
 
             <div class="gallery-item" data-location="믹스" data-gender="암컷" data-lostdate="2024-02-19">
 
-                <img src="bohoimg/lang48.jpeg" alt="Image 24">
+                <img src="boho/bohoimg/lang48.jpeg" alt="Image 24">
                 <div class="date">
                     <span>19</span><br>2024-02
                 </div>
@@ -798,7 +790,7 @@
 
             <div class="gallery-item" data-location="포메라니안" data-gender="암컷" data-lostdate="2024-03-23">
 
-                <img src="bohoimg/lang40.jpeg" alt="Image 24">
+                <img src="boho/bohoimg/lang40.jpeg" alt="Image 24">
                 <div class="date">
                     <span>23</span><br>2024-03
                 </div>
@@ -815,7 +807,7 @@
 
             <div class="gallery-item" data-location="말티즈" data-gender="암컷" data-lostdate="2024-04-15">
 
-                <img src="bohoimg/lang41.jpg" alt="Image 24">
+                <img src="boho/bohoimg/lang41.jpg" alt="Image 24">
                 <div class="date">
                     <span>15</span><br>2024-04
                 </div>
@@ -832,7 +824,7 @@
    <!-- 열 네번째 줄 -->
             <div class="gallery-item" data-location="말티푸" data-gender="암컷" data-lostdate="2024-05-26">
 
-                <img src="bohoimg/lang42.jpeg" alt="Image 24">
+                <img src="boho/bohoimg/lang42.jpeg" alt="Image 24">
                 <div class="date">
                     <span>26</span><br>2024-05
                 </div>
@@ -849,7 +841,7 @@
 
             <div class="gallery-item" data-location="말티푸" data-gender="암컷" data-lostdate="2024-06-13">
 
-                <img src="bohoimg/lang43.jpg" alt="Image 24">
+                <img src="boho/bohoimg/lang43.jpg" alt="Image 24">
                 <div class="date">
                     <span>13</span><br>2024-06
                 </div>
@@ -866,7 +858,7 @@
 
             <div class="gallery-item" data-location="포메라니안" data-gender="암컷" data-lostdate="2024-07-01">
 
-                <img src="bohoimg/lang44.jpeg" alt="Image 24">
+                <img src="boho/bohoimg/lang44.jpeg" alt="Image 24">
                 <div class="date">
                     <span>01</span><br>2024-07
                 </div>
@@ -958,7 +950,7 @@
         </script>
         
         
-    <script src="boho.js"></script>
+    <script src="boho/boho.js"></script>
 </form>
 
 </html>
