--- a/signUp2.html
+++ b/signUp2.html
@@ -18,7 +18,7 @@
           <li>입양하기</li></a>
         <a href="findDog.html">
           <li>실종신고</li></a>
-        <a href="">
+        <a href="boho.html">
           <li>보호중</li></a>
         <!-- <a href="">
           <li>찜목록</li></a> -->
