석현 : findDog html,css, bohohtml 수정

--- a/boho.html
+++ b/boho.html
@@ -54,7 +54,7 @@
 <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ헤더ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->
 <div class="main">
     <div class="ch">
-        <h1>보호중임</h1>
+        <h1>보호중</h1>
     </div>
     <hr>
     
