--- a/boho.html
+++ b/boho.html
@@ -127,7 +127,7 @@
                 </div> -->
                 <div class="buttons-container">
                     <button type="button" id="searchBtn">조회</button>
-                    <a href="findDog2.html">
+                    <a href="boho2.html">
                         <button type="button" id="registerBtn">등록</button>
                     </a>
                 </div>
